# v-sharp

./: .gitignore  CMakeLists.txt  Doxyfile  build.ps1  go.mod  test.txt
.github/workflows/: ci.yml
cmd/vsharp/: main.go
examples/: main.vs  memory.vs  types.vs
internal/cli/: cli.go  compile.go  helpers.go  registry.go
internal/lexer/: error.go  helpers.go  lexer.go  token.go
internal/version/: version.go  version_test.go
pkg/vsharp/: cli.go
scripts/: build.ps1  build.sh
source/: ast.cxx  cli.cxx  error.cxx  lexer.cxx  lexer.l  main.cxx  parser.cxx  server.cxx
source/include/: ast.hxx  config.in.hxx  error.hxx  parser.hxx  string.hxx  token.hxx
source/include/flex/: FlexLexer.h
tests/: lexer_tests.cxx
